--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -48,6 +48,10 @@
   },
   "devDependencies": {
     "@rematch/core": "2.2.0",
+    "vite": "5.4.3",
+    "vite-plugin-svgr": "4.2.0",
+    "vite-plugin-css-injected-by-js": "3.5.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "base-icon": "2.3.2",
     "classnames": "2.5.1",
     "i18next": "23.14.0",
@@ -60,6 +64,7 @@
     "react-redux": "9.1.2",
     "react-router-dom": "6.26.1",
     "redux": "5.0.1",
+    "sass": "1.78.0",
     "typescript": "5.5.4"
   },
   "publishConfig": {
