--- a/.github/workflows/release-api.yaml
+++ b/.github/workflows/release-api.yaml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
+        with:
+          run_install: false
 
       - name: Install Node.js
         uses: actions/setup-node@v4
