--- a/.github/workflows/release-api.yaml
+++ b/.github/workflows/release-api.yaml
@@ -32,6 +32,7 @@ jobs:
         with:
           node-version: 20
           cache: pnpm
+          cache-dependency-path: './packages/api'
 
       - name: Install Just
         uses: extractions/setup-just@v2
