--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raline/api",
-  "version": "1.0.0-alpha.1",
+  "version": "0.0.1",
   "description": "Client API for raline comment system",
   "keywords": [
     "api",
