--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -82,8 +82,8 @@
     ]
   },
   "dependencies": {
-    "@vueuse/core": "^11.0.3",
     "@raline/api": "0.0.1",
+    "@vueuse/core": "^11.0.3",
     "autosize": "^6.0.1",
     "marked": "^14.1.1",
     "marked-highlight": "^2.1.4",
@@ -94,8 +94,13 @@
     "@babel/core": "7.25.2",
     "@babel/preset-env": "7.25.4",
     "@giphy/js-types": "5.1.0",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^5.0.7",
     "@types/autosize": "4.0.3",
     "@vitejs/plugin-vue": "5.1.3",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-esbuild": "^6.1.1",
     "user-agent-data-types": "0.4.2",
     "vite": "5.4.3"
   },
