--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -58,7 +58,7 @@
   ],
   "scripts": {
     "build": "pnpm rollup && pnpm style",
-    "clean": "rimraf ./dist",
+    "clean": "rm -rf ./dist",
     "dev": "vite",
     "prepublishOnly": "pnpm clean && pnpm build",
     "rollup": "rollup -c rollup.config.ts --configPlugin esbuild",
@@ -83,9 +83,9 @@
   },
   "dependencies": {
     "@raline/api": "0.0.1",
-    "@vueuse/core": "^11.0.3",
+    "@vueuse/core": "^11.1.0",
     "autosize": "^6.0.1",
-    "marked": "^14.1.1",
+    "marked": "^14.1.2",
     "marked-highlight": "^2.1.4",
     "recaptcha-v3": "^1.11.3",
     "vue": "^3.5.3"
@@ -101,6 +101,7 @@
     "@vitejs/plugin-vue": "5.1.3",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-esbuild": "^6.1.1",
+    "sass-embedded": "^1.79.1",
     "user-agent-data-types": "0.4.2",
     "vite": "5.4.3"
   },
