--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ publish = ["crates-io"]
 
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
-spring = "0.1.1"
-spring-web = "0.1.2"
-spring-mail = "0.1.2"
-spring-redis = "0.1.1"
-spring-sea-orm = { version = "0.1.3", features = ["postgres", "with-web"] }
+spring = "0.1"
+spring-web = "0.1"
+spring-mail = "0.1"
+spring-redis = "0.1"
+spring-sea-orm = { version = "0.1", features = ["postgres", "with-web"] }
 sea-orm = "1.0"
 serde = "1.0"
 serde_json = "1.0"
@@ -30,3 +30,6 @@ rand = "0.8"
 askama = "0.12"
 itertools = "0.13"
 derive_more = { version = "1.0", features = ["full"] }
+instant-akismet = "0.2"
+reqwest = "0.12"
+regex = "1"
