--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,6 @@ derive_more = { version = "1.0", features = ["full"] }
 instant-akismet = "0.2"
 reqwest = "0.12"
 regex = "1"
+ip2region = "0.1"
+uaparser = "0.6"
+comrak = "0.28"
