--- a/config/app.toml
+++ b/config/app.toml
@@ -14,6 +14,9 @@ from = "hff1996723@163.com"
 [sea-orm]
 uri = "postgres://postgres:xudjf23adj213@localhost:5432/raline"
 
+[sea-orm-web]
+one_indexed = true
+
 [redis]
 uri = "redis://127.0.0.1/"
 
