--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,8 @@ pem = "3.0"
 lazy_static = "1.4"
 tracing = "0.1"
 rand = "0.8"
-askama = "0.12"
+askama = { version = "0.12", features = ["with-axum"] }
+askama_axum = "0.4"
 itertools = "0.13"
 derive_more = { version = "1.0", features = ["full"] }
 instant-akismet = "0.2"
