--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -99,6 +99,7 @@
     "@rollup/plugin-replace": "^5.0.7",
     "@types/autosize": "4.0.3",
     "@vitejs/plugin-vue": "5.1.3",
+    "rollup": "^4.22.4",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-esbuild": "^6.1.1",
     "sass-embedded": "^1.79.1",
